# binimage

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  main.rs
