[package]
name = "binimage"
version = "0.1.3"
authors = ["teaearlgraycold <supacoofoo@gmail.com>"]
repository = "https://github.com/teaearlgraycold/binimage"
license = "MIT"

[dependencies]
image = "0.15.0"
docopt = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0.80"

[[bin]]
name = "binimage"
doc = false
test = false
