[package]
name = "binimage"
version = "0.2.0"
authors = ["danthedaniel <teaearlgraycold@protonmail.com>"]
repository = "https://github.com/danthedaniel/binimage"
license = "MIT"
edition = "2018"

[dependencies]
image = "0.15.0"
docopt = "1.1.0"
serde = "1.0.105"
serde_derive = "1.0.105"

[[bin]]
name = "binimage"
doc = false
test = false
